commit 2 lista, fixat pos på tomtar, bakgrunds img

--- a/main.html
+++ b/main.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
-    <DIv>
-
+    <DIv  class="Rubrik">
+       <img src="img/santa_small.png" alt="Tomte">
         <H1>DECEMBER 2023</H1>
+        <img src="img/santa_small.png" alt="Tomte">
     </DIv>
+<ul>
+
+<li>13 december Lucia</li>
+<li class="jul">24 december julafton</li>
+<li>25 december juldagen</li>
+<li>26 december annandag jul</li>
+<li class="nyår">1 januari nyårsdagen</li>
 
 
 
-
-
-
+</ul>
 
 
 
