--- a/main.html
+++ b/main.html
@@ -26,7 +26,65 @@
 
 </ul>
 
+<table>
+    <tr >
+      <th class="dgr">Måndag</th>
+      <th class="dgr">Tisdag</th>
+      <th class="dgr">Onsdag</th>
+      <th class="dgr">Torsdag</th>
+      <th class="dgr">Fredag</th>
+    <th class="dgr">Lördag</th>
+    <th class="dgr">Söndag</th>
 
+    <tr >
+        <th class="dgr">27</th>
+        <th class="dgr">28</th>
+        <th class="dgr">29</th>
+        <thclass="dgr" >30</th>
+        <thclass="dgr">1</th>
+      <th class="dgr">2</th>
+      <th class="dgr">3</th>
+      
+      <tr >
+        <th class="dgr">4</th>
+        <th class="dgr">5</th>
+        <th class="dgr">6</th>
+        <th class="dgr">7</th>
+        <th class="dgr">8</th>
+      <th class="dgr">9</th>
+      <th class="dgr">10</th>
+
+      <tr >
+        <th class="dgr">11</th>
+        <th class="dgr">12</th>
+        <th class="dgr">13</th>
+        <th class="dgr">14</th>
+        <th class="dgr">15</th>
+      <th class="dgr">16</th>
+      <th class="dgr">17</th>
+
+      <tr >
+        <th class="dgr">18</th>
+        <th class="dgr">19</th>
+        <th class="dgr">20</th>
+        <th class="dgr">21</th>
+        <th class="dgr">22</th>
+      <th class="dgr">23</th>
+      <th class="dgr">24</th>
+
+      <tr >
+        <th class="dgr">25</th>
+        <th class="dgr">26</th>
+        <th class="dgr">27</th>
+        <th class="dgr">28</th>
+        <th class="dgr">29</th>
+      <th class="dgr">30</th>
+      <th class="dgr">31</th>
+
+      
+
+  
+  </table>
 
 
 </body>
