--- a/main.html
+++ b/main.html
@@ -40,8 +40,8 @@
         <th class="dgr">27</th>
         <th class="dgr">28</th>
         <th class="dgr">29</th>
-        <thclass="dgr" >30</th>
-        <thclass="dgr">1</th>
+        <th class="dgr" >30</th>
+        <th class="dgr">1</th>
       <th class="dgr">2</th>
       <th class="dgr">3</th>
       
@@ -77,7 +77,7 @@
         <th class="dgr">26</th>
         <th class="dgr">27</th>
         <th class="dgr">28</th>
-        <th class="dgr">29</th>
+        <th  class="dgr">29</th>
       <th class="dgr">30</th>
       <th class="dgr">31</th>
 
@@ -85,6 +85,12 @@
 
   
   </table>
+
+<div class="fy">
+<img src="img/fireworks_small.png" alt="Fyverkeri i botten av skärmen">
+
+</div>
+
 
 
 </body>
